--- a/res/menu/activity_vocabulary_entry_translation.xml
+++ b/res/menu/activity_vocabulary_entry_translation.xml
@@ -1,5 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
-        android:orderInCategory="100" />
+   	<item android:id="@+id/edit_vocabulary_entry"
+   	    android:title="@string/edit_vocabulary_entry" />
 </menu>
